attempt overflow fix

--- a/styles/utils.module.css
+++ b/styles/utils.module.css
@@ -10,6 +10,7 @@
   z-index: 1;
   top: 0;
   left: 0;
+  overflow: hidden;
 }
 
 .siteWrapper2 {
@@ -623,7 +624,8 @@
 
 .mainHeadings>* {
   text-align: center;
-  /* text-shadow: 1.5px 1.5px #ccc; */
+  text-shadow: 1px 1px 2px #000;
+
   color: #bd9f45;
   -webkit-text-stroke: 2px black;
 }
@@ -671,7 +673,7 @@
     width: 100%;
   }
   .mainHeadingsWrapper {
-    top: -5rem;
+    top: -10rem;
     left: 0;
   }
   .mainHeadings>* {
@@ -685,12 +687,9 @@
   }
   .mainHeadings p {
     width: 100%;
-  -webkit-text-stroke: 0 black;
+    max-width: 90%;
 
-  }
-  .mainHeadings h1, .mainHeadings p {
-    /* text-shadow: 0px 1px 2px #ccc; */
-    text-shadow: 1px 1px 2px #000;
+  -webkit-text-stroke: 0 black;
 
   }
 }
@@ -1562,7 +1561,31 @@
 
 /* loading spinner */
 
+.loadingProducts{
+  width: 100%;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  top: -15rem;
+}
+
+.loadingProducts img{
+  height: 70rem;
+
+}
+
+.loadingProductsCircle{
+  border-radius: 50%;
+  width: 100px;
+  height: 100px;
+  background-color: #006ce9;
+  position: absolute;
+}
+
 .ldsRing {
+  position: absolute;
   display: inline-block;
   width: 80px;
   height: 80px;
